{
    "name": "PlayerCtrls",
    "maps": [
        {
            "name": "CharacterCtrls",
            "id": "f99c22e0-594c-42a6-ad06-023dab63bba8",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "966a3f04-edd5-442b-85be-c20fcd277bad",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "1e6cba0d-20ba-4949-ab37-0217ad657d6e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "9d57cddf-03aa-418c-acec-9d3606882954",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d05bb625-b10b-44b1-9323-944b1107a4d4",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6100ebd3-0e67-48c5-9035-4c6701e3367f",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6e321fc-a3d1-4cf9-bcff-54c29c91bc27",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}